-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 7
-
Component/s: client-libs
-
b60
-
generic
-
solaris
-
Verified
The JPRT system has failed to build fresh JDK by the following compile time error:
"../../../src/solaris/native/sun/xawt/XToolkit.c", line 953: undefined symbol: IsXExtensionPointer
cc: acomp failed for ../../../src/solaris/native/sun/xawt/XToolkit.c
This is related to the recent CR push: 6799099
"../../../src/solaris/native/sun/xawt/XToolkit.c", line 953: undefined symbol: IsXExtensionPointer
cc: acomp failed for ../../../src/solaris/native/sun/xawt/XToolkit.c
This is related to the recent CR push: 6799099
- relates to
-
JDK-6799099 All automatic regression tests that create Robot fail on X11
-
- Closed
-