6844750: Solaris build failed after 6799099

Reviewed-by: yan